addons/logging-operator/logging-stack/resources/workloads/fluentbit/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentbit-traffic
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Connect to the DNS service inside the kube-system namespace
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchExpressions:
        - key: k8s-app
          values:
          - kube-dns
          operator: In
  # Connect to the api-server endpoint (enable to all ips for allowing all kind of network topologies) and
  # allowing the http01 challeng self test for http and https
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  - ports:
    - port: 24240
      protocol: TCP
    to:
    - podSelector: {}
